--- a/templates/_variables.html
+++ b/templates/_variables.html
@@ -16,23 +16,23 @@
         /* Highlight text color of table of content */
         --toc-highlight-text-color: #7d4282;
         --toc-background-color: white;
-        --code-color: #4a4a4a;
-        --code-background-color: white;
+        --code-color: white;
+        --code-background-color: transparent;
         --shadow-color: #ddd;
     }
 
     @media (prefers-color-scheme: dark) {
         :root {
-            --primary-color: #382929;
-            --primary-text-color: #d7d7d7;
+            --primary-color:#5A3C66;
+            --primary-text-color: #EEE5E9;
             --primary-text-color-over: #FFF;
-            --primary-link-color: #9b9b9b;
-            --secondary-color: #282828;
+            --primary-link-color: #42E2B8;
+            --secondary-color: #212022;
             --secondary-text-color: #f2f2f2;
-            --toc-highlight-text-color: #f2f2f2;
-            --toc-background-color: #3a3a3a;
+            --toc-highlight-text-color: #C36FA2;
+            --toc-background-color: #2b2b2d;
             --code-color: white;
-            --code-background-color: #4a4a4a;
+            --code-background-color: transparent;
 
             --shadow-color: #202020;
             --header-font-family: "Fira Sans", sans-serif;
