Change zola ver

--- a/templates/_variables.html
+++ b/templates/_variables.html
@@ -16,7 +16,7 @@
         /* Highlight text color of table of content */
         --toc-highlight-text-color: #7d4282;
         --toc-background-color: white;
-        --code-color: white;
+        --code-color: #4b454f;
         --code-background-color: transparent;
         --shadow-color: #ddd;
     }
