Change page title

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,3 +23,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600&display=swap" rel="stylesheet">
 {% endblock font %}
+
+{% block favicon %}
+{% endblock favicon %}
