--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,6 @@
 {% extends "juice/templates/page.html" %}
 
+{% block title %}{{ config.title }} | {{ page.title }} {% endblock title %}
+
 {% block sidebar %}
 {% endblock %}
-
